# CacheSimulator

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  Makefile  README.md  required_libraries.txt
include/: Cache.h  CacheInsertResult.h  CacheLine.h  Catch  DataStructure.h  EvictionPolicy.h  Loop.h  Set.h  SetInsertResult.h  Simulator.h  SimulatorError.h  cache.h  data.h  loop.h  simulator.h  simulator.h.bak
src/: Cache.cpp  Makefile  Set.cpp  Simulator.cpp  cache.cc  main.cc  main.cc.bak  simulator.cc
tests/: Makefile  test_Cache.cpp  test_CacheLine.cpp  test_Set.cpp  test_Simulator.cpp  test_main.cc  test_simulator.cc
